# dos14--Kuchko_Evgenii-git-flow

./: 123.py  README.md  docker-compose.yaml  dockerfile  dockerfile-nginx  hw16.py  inventory.ini  main.py  main_ken.py  playbook.yml  pyproject.toml  roles.yaml  users.csv  users.json
ansible/: docker-compose.yaml  playbook.yml
ansible/roles/apps/tasks/: main.yml
ansible/roles/createuser/tasks/: main.yml
ansible/roles/docker-compose/tasks/: main.yml
ansible/roles/poetry/: my.service.j2
ansible/roles/poetry/tasks/: main.yml
nginx/: authz.conf  nginx.conf
project-poetry/: main.py  pyproject.toml
