[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["GosuOoops <evgenii_neo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
